@@ -144,7 +144,8 @@
                     'relation_field', 'views', 'invisible', 'add_remove',
                     'sort', 'context', 'size', 'filename', 'autocomplete',
                     'translate', 'create', 'delete', 'selection_change_with',
-                    'schema_model', 'required'].forEach(function(name) {
+                    'schema_model', 'required', 'help_selection', 'help_field',
+                ].forEach(function(name) {
                         if ((name in field) && (!(name in node_attrs))) {
                             node_attrs[name] = field[name];
                         }
